# bson-numpy

./: .gitignore  .travis.yml  CMakeLists.txt  README.rst  THIRD-PARTY-NOTICES  benchmark.py  setup.py  test.py  tox.ini
bson-numpy/: __init__.py  bsonnumpy.c  bsonnumpy.h  bsonnumpy_field_order.c  bsonnumpy_field_order.h  bsonnumpy_hashtable.c  bsonnumpy_hashtable.h  bsonnumpy_util.c
bson-numpy/bson/: bson-iter.c  bson-iter.h  bson-memory.c  bson-stdint.h  bson-version.h
bsonnumpy/: __init__.py  bsonnumpy.c  bsonnumpy_field_order.c  bsonnumpy_util.c  version.py
bsonnumpy/bson/: bson-config.h  bson-iter.c  bson-iter.h  bson-version.h
bsonnumpy/jsonsl/: jsonsl.h
cmake/: FindBSON.cmake  FindNumpy.cmake
doc/: .gitignore  Makefile  conf.py  index.rst
doc/_static/: warnDeprecated.js
test/: __init__.py  test_arrays.py  test_collection.py  test_error_cases.py  test_flexible_dtype.py  test_ndarray_to_sequence.py  test_nested.py  test_pandas.py  test_scalars.py  test_sequence.py  test_sequence_to_ndarray.py  test_type_errors.py
